# cycleganstyletransfer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cyclegan_env/: pyvenv.cfg
cyclegan_env/Scripts/: activate  activate.bat
cycleganstyletransfer/: __init__.py  dataset.py  features.py  plots.py
cycleganstyletransfer/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: Discriminator.py  LowFidelityGAN_V1_Decay_monet_discriminator.weights.h5  LowFidelityGAN_V1_Pivot_monet_discriminator.weights.h5
notebooks/: 1. load_image_explore.ipynb  10 CheckpointProgression.ipynb  10 V2 Attempt.ipynb  2. dataset_creation.ipynb  3. A simpe Classifier.ipynb  4.  A simple patch Classifier.ipynb  5.  A co domain classifier.ipynb  6. Generator model.ipynb  8 Cyclic GAN.ipynb  9a Low fidelity model DEV copy.ipynb  9d LowFidelityGAN_Decay.ipynb  test.py
notebooks/archive/: 7.  An acyclic GAN.ipynb  8.  Attempts to improve perfomance copy 2.ipynb  8.  Attempts to improve perfomance copy.ipynb  8.  Attempts to improve perfomance.ipynb  88 Cyclic gan.ipynb  99. A simple binary discrim.ipynb  99. create_test_descrim.ipynb
notebooks/logs/LowFidelityGAN_TEST/20250620-054609/: events.out.tfevents.1750398369.8f276069918b.13160.1.v2
notebooks/logs/LowFidelityGAN_V1_Pivot/20250623-012143/: events.out.tfevents.1750641703.000514360bc4.386.1.v2
tfenv/: pyvenv.cfg
tfenv/Scripts/: activate  activate.bat
